--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 	
 	<div class="top_row">
 
-	<a href="games/2048/index.html"><img class="wordle" src="2048.jpg" alt="2048"></a>
-	<a href="games/wordle/index.html"><img class="wordle" src="wordle.jpg" alt="wordle"></a>
-	<a href="games/DogeMiner/index.html"><img class="wordle" src="dog.jpg" alt="2048"></a>
+	<a href="2048/index.html"><img class="wordle" src="2048.jpg" alt="2048"></a>
+	<a href="wordle/index.html"><img class="wordle" src="wordle.jpg" alt="wordle"></a>
+	<a href="DogeMiner/index.html"><img class="wordle" src="dog.jpg" alt="2048"></a>
 	
 	</div>
 	
@@ -133,9 +133,9 @@
 	
 	<div class="bottom_row">
 
-	<a href="games/slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
-	<a href="games/weird/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
-	<a href="games/run3/index.html"><img class="wordle" src="run3.jpg" alt="run3"></a>
+	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
+	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
+	<a href="run3/index.html"><img class="wordle" src="run3.jpg" alt="run3"></a>
 	
 	</div>
 	
