--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
 
 	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
 	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
+	<a href="bitlife/index.html"><img class="wordle" src="bitlife/logo.png" alt="run3"></a>
+	
+	</div>
+
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
+	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
 	<a href="run3/index.html"><img class="wordle" src="run3.jpg" alt="run3"></a>
 	
 	</div>
