--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			
 			
             background: linear-gradient(#133337, gray);
-			height:1000px;
+			height:2000px;
 			
 		}
 		
@@ -99,7 +99,7 @@
 
 		}
 		
-		h5 {
+		h4 {
 			
 			
 			text-align:center;
@@ -134,7 +134,7 @@
 
 	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
 	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
-	<a href="bitlife/index.html"><img class="wordle" src="bitlife/logo.png" alt="run3"></a>
+	<a href="bitlife/index.html"><img class="wordle" src="bitlife/logo.png" alt="bitlife"></a>
 	
 	</div>
 
@@ -142,13 +142,33 @@
 	
 	<div class="bottom_row">
 
-	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
-	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
-	<a href="run3/index.html"><img class="wordle" src="run3.jpg" alt="run3"></a>
+	<a href="snake/index.html"><img class="wordle" src="snake.jpg" alt="snake"></a>
+	<a href="retro-bowl/index.html"><img class="wordle" src="retro.jpg" alt="retro-bowl"></a>
+	<a href="cell/index.html"><img class="wordle" src="cell.jpg" alt="cell"></a>
 	
 	</div>
 	
-	<h5>*This Is A Draft With Minimum Games</h5>
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="cookieclicker/index.html"><img class="wordle" src="cookie.jpg" alt="cookie"></a>
+	<a href="subway/index.html"><img class="wordle" src="subway.jpg" alt="subway"></a>
+	<a href="touch/index.html"><img class="wordle" src="touch.jpg" alt="touch"></a>
+	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="tunnelrush/index.html"><img class="wordle" src="tunnel.jpg" alt="tunnelrush"></a>
+	<a href="tetris/index.html"><img class="wordle" src="tetris.jpg" alt="tetris"></a>
+	<a href="happy/index.html"><img class="wordle" src="happy.jpg" alt="happy"></a>
+	
+	</div>
+	
+	<h4>*This Is A Draft With Minimum Games</h4>
 	
 </body>
 
