--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	
-    <title>Unblocked </title>
+    <title>SHS</title>
     
 	
 	
@@ -26,7 +26,7 @@
 			
 			
             background: linear-gradient(#133337, gray);
-			height:2000px;
+			height:2600px;
 			
 		}
 		
@@ -165,6 +165,26 @@
 	<a href="tunnelrush/index.html"><img class="wordle" src="tunnel.jpg" alt="tunnelrush"></a>
 	<a href="tetris/index.html"><img class="wordle" src="tetris.jpg" alt="tetris"></a>
 	<a href="happy/index.html"><img class="wordle" src="happy.jpg" alt="happy"></a>
+	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="robogo/index.html"><img class="wordle" src="robogo.jpg" alt="robogo"></a>
+	<a href="soccer-random/index.html"><img class="wordle" src="soccer.jpg" alt="soccer"></a>
+	<a href="https://scratch.mit.edu/projects/105500895"><img class="wordle" src="geometry.jpg" alt="geometry_dash"></a>
+	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="https://ps.shrewsbury.k12.ma.us/public/"><img class="wordle" src="powerschool.jpg" alt="powerschool"></a>
+	<a href="https://lms.shrewsbury.k12.ma.us"><img class="wordle" src="schoology.jpg" alt="schoology"></a>
+	<a href="https://docs.google.com/document/u/0/"><img class="wordle" src="docs.jpg" alt="docs"></a>
 	
 	</div>
 	
