--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-63K66Y3GGM"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9E0X4X42X8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-63K66Y3GGM');
+  gtag('config', 'G-9E0X4X42X8');
 </script>
 	
     <title>SHS</title>
