--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 	<a href="robogo/index.html"><img class="wordle" src="robogo.jpg" alt="robogo"></a>
 	<a href="soccer-random/index.html"><img class="wordle" src="soccer.jpg" alt="soccer"></a>
-	<a href="https://scratch.mit.edu/projects/105500895"><img class="wordle" src="geometry.jpg" alt="geometry_dash"></a>
+	<a href="https://scratch.mit.edu/projects/105500895"><img class="wordle" src="Geometry.jpg" alt="geometry_dash"></a>
 	
 	</div>
 	
