--- a/movies.html
+++ b/movies.html
@@ -4,7 +4,6 @@
 <head>
 	
 	
-	
 	<script>
 	
 	const lis = document.querySelectorAll("li");
@@ -301,28 +300,95 @@ ul li a {
 	
 	<div class="buttons-container">
   <ul>
-    <li class="active"><a href="#" class="active-text"><i class="fa fa-codepen" aria-hidden="true"></i></a></li>
+    <li class="active"><a href="index.html" class="active-text"><i class="fa fa-codepen" aria-hidden="true"></i></a></li>
     <li><a href="index.html"><i class=" hjbjkbjkbjk" aria-hidden="true"><img src="game_logo.png" class="game"></i></a></li>
     <li><a href="movies.html"><i class="fa fa-rocket" aria-hidden="true"><img src="movie.png" class="movie"></i></a></li>
     <li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"><img src="tools.png" class="tools"></i></a></li>
   </ul>
-		
-	
 </div>
-			
-			
-			<iframe src="https://drive.google.com/drive/folders/1cRLqvCzXtedRp5rH5oE6r9KyfUnSj8Vi?usp=sharing" style="width:100%; height:600px; border:0;"></iframe>
 
 			</div>
 
 
 	
+	
+	
+	
+	
+	
+	<div class="top_row">
+		
+		
+
+	<a href="https://www.apple.com"><img class="wordle" src="panther1.jpg" alt="2048"></a>
+	<a href="wordle/index.html"><img class="wordle" src="wordle.jpg" alt="wordle"></a>
+	<a href="DogeMiner/index.html"><img class="wordle" src="dog.jpg" alt="2048"></a>
+	
 	</div>
 	
+	<div class="clear"></div>
 	
+	<div class="bottom_row">
+
+	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
+	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
+	<a href="bitlife/index.html"><img class="wordle" src="bitlife/logo.png" alt="bitlife"></a>
 	
+	</div>
+
+	<div class="clear"></div>
 	
+	<div class="bottom_row">
+
+	<a href="snake/index.html"><img class="wordle" src="snake.jpg" alt="snake"></a>
+	<a href="retro-bowl/index.html"><img class="wordle" src="retro.jpg" alt="retro-bowl"></a>
+	<a href="cell/index.html"><img class="wordle" src="cell.jpg" alt="cell"></a>
 	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="cookieclicker/index.html"><img class="wordle" src="cookie.jpg" alt="cookie"></a>
+	<a href="subway/index.html"><img class="wordle" src="subway.jpg" alt="subway"></a>
+	<a href="touch/index.html"><img class="wordle" src="touch.jpg" alt="touch"></a>
+	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="tunnelrush/index.html"><img class="wordle" src="tunnel.jpg" alt="tunnelrush"></a>
+	<a href="tetris/index.html"><img class="wordle" src="tetris.jpg" alt="tetris"></a>
+	<a href="happy/index.html"><img class="wordle" src="happy.jpg" alt="happy"></a>
+	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="robogo/index.html"><img class="wordle" src="robogo.jpg" alt="robogo"></a>
+	<a href="soccer-random/index.html"><img class="wordle" src="soccer.jpg" alt="soccer"></a>
+	<a href="https://scratch.mit.edu/projects/105500895"><img class="wordle" src="geometry.jpg" alt="geometry_dash"></a>
+	
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="https://ps.shrewsbury.k12.ma.us/public/"><img class="wordle" src="powerschool.jpg" alt="powerschool"></a>
+	<a href="https://lms.shrewsbury.k12.ma.us"><img class="wordle" src="schoology.jpg" alt="schoology"></a>
+	<a href="https://docs.google.com/document/u/0/"><img class="wordle" src="docs.jpg" alt="docs"></a>
+	
+	</div>
+	
+		
+		
+		</div>
 	
 </body>
 
