--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
   gtag('config', 'G-9E0X4X42X8');
 	
+
 	
 </script>
+	
+	<link rel="shortcut icon" type="image/x-icon" href="poly.ico" />
 	
 	<script>
 	
