--- a/movies.html
+++ b/movies.html
@@ -3,6 +3,8 @@
 
 <head>
 	
+	<link rel="shortcut icon" type="image/x-icon" href="poly.ico" />
+	
 	
 	<script>
 	
@@ -164,6 +166,8 @@ ul li a {
  background: linear-gradient(#133337, gray);
   background-repeat: no-repeat;
   background-size: cover;
+			
+			height:2600px;
 
 			
 		}
@@ -280,6 +284,15 @@ ul li a {
 			
 		}
 		
+		.plex {
+			
+			display:block;
+			width:800px;
+			margin-left:auto;
+			margin-right:auto;
+			padding-top:10em;
+			
+		}
 		
 		
 		
@@ -312,79 +325,13 @@ ul li a {
 
 	
 	
+	<a href="https://www.plex.tv"><img src="plex.jpg" class="plex"></a>
 	
-	
-	
-	
-	<div class="top_row">
 		
-		
-
-	<a href="https://www.apple.com"><img class="wordle" src="panther1.jpg" alt="2048"></a>
-	<a href="wordle/index.html"><img class="wordle" src="wordle.jpg" alt="wordle"></a>
-	<a href="DogeMiner/index.html"><img class="wordle" src="dog.jpg" alt="2048"></a>
+		<h3>Disclaimer!!! This is a draft. Movies will be added soon.</h3>
 	
-	</div>
 	
-	<div class="clear"></div>
 	
-	<div class="bottom_row">
-
-	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
-	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
-	<a href="bitlife/index.html"><img class="wordle" src="bitlife/logo.png" alt="bitlife"></a>
-	
-	</div>
-
-	<div class="clear"></div>
-	
-	<div class="bottom_row">
-
-	<a href="snake/index.html"><img class="wordle" src="snake.jpg" alt="snake"></a>
-	<a href="retro-bowl/index.html"><img class="wordle" src="retro.jpg" alt="retro-bowl"></a>
-	<a href="cell/index.html"><img class="wordle" src="cell.jpg" alt="cell"></a>
-	
-	</div>
-	
-	<div class="clear"></div>
-	
-	<div class="bottom_row">
-
-	<a href="cookieclicker/index.html"><img class="wordle" src="cookie.jpg" alt="cookie"></a>
-	<a href="subway/index.html"><img class="wordle" src="subway.jpg" alt="subway"></a>
-	<a href="touch/index.html"><img class="wordle" src="touch.jpg" alt="touch"></a>
-	
-	</div>
-	
-	<div class="clear"></div>
-	
-	<div class="bottom_row">
-
-	<a href="tunnelrush/index.html"><img class="wordle" src="tunnel.jpg" alt="tunnelrush"></a>
-	<a href="tetris/index.html"><img class="wordle" src="tetris.jpg" alt="tetris"></a>
-	<a href="happy/index.html"><img class="wordle" src="happy.jpg" alt="happy"></a>
-	
-	</div>
-	
-	<div class="clear"></div>
-	
-	<div class="bottom_row">
-
-	<a href="robogo/index.html"><img class="wordle" src="robogo.jpg" alt="robogo"></a>
-	<a href="soccer-random/index.html"><img class="wordle" src="soccer.jpg" alt="soccer"></a>
-	<a href="https://scratch.mit.edu/projects/105500895"><img class="wordle" src="geometry.jpg" alt="geometry_dash"></a>
-	
-	</div>
-	
-	<div class="clear"></div>
-	
-	<div class="bottom_row">
-
-	<a href="https://ps.shrewsbury.k12.ma.us/public/"><img class="wordle" src="powerschool.jpg" alt="powerschool"></a>
-	<a href="https://lms.shrewsbury.k12.ma.us"><img class="wordle" src="schoology.jpg" alt="schoology"></a>
-	<a href="https://docs.google.com/document/u/0/"><img class="wordle" src="docs.jpg" alt="docs"></a>
-	
-	</div>
 	
 		
 		
