--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ ul li a {
     <li class="active"><a href="#" class="active-text"><i class="fa fa-codepen" aria-hidden="true"></i></a></li>
     <li><a href="index.html"><i class=" hjbjkbjkbjk" aria-hidden="true"><img src="game_logo.png" class="game"></i></a></li>
     <li><a href="movies.html"><i class="fa fa-rocket" aria-hidden="true"><img src="movie.png" class="movie"></i></a></li>
-    <li><a href="tools.html"><i class="fa fa-user-circle" aria-hidden="true"><img src="tools.png" class="tools"></i></a></li>
+    <li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"><img src="tools.png" class="tools"></i></a></li>
   </ul>
 </div>
 
@@ -327,7 +327,7 @@ ul li a {
 	
 	
 	
-	=
+	
 	
 	<div class="top_row">
 
@@ -387,7 +387,40 @@ ul li a {
 	
 	</div>
 	
-	<div class="clear"></div>
+	
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="portaboy/index.html"><img class="wordle" src="porta.jpg" alt="portaboy"></a>
+	<a href="sword/index.html"><img class="wordle" src="sword.jpg" alt="sword"></a>
+	<a href="fruitninja/index.html"><img class="wordle" src="fruitninja.jpg" alt="fruitninja"></a>
+	
+	</div>
+		
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="knifehit/index.html"><img class="wordle" src="knife.jpg" alt="portaboy"></a>
+	<a href="crossy/index.html"><img class="wordle" src="crossy.jpg" alt="sword"></a>
+	<a href="jetpackjoyride/index.html"><img class="wordle" src="jetpack.jpg" alt="fruitninja"></a>
+	
+	</div>
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="breaklock/index.html"><img class="wordle" src="lock.jpg" alt="portaboy"></a>
+	<a href="bison/index.html"><img class="wordle" src="bison.jpg" alt="sword"></a>
+	<a href="doodle/index.html"><img class="wordle" src="doodle.jpg" alt="fruitninja"></a>
+	
+	</div>
+		
+		<div class="clear"></div>
 	
 	<div class="bottom_row">
 
@@ -399,6 +432,10 @@ ul li a {
 	
 		
 		</div>
+	
+	
+	
+	
 	
 </body>
 
