--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ for (let i = 0; i < lis.length; i++) {
 	
     <title>SHS</title>
 	
+	<link rel="icon" type="image/x-icon" href="icon.png">
+	
 	
     
 	
