--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@ ul li a {
 	
 	<div class="bottom_row">
 
-	<a href="knifehit/index.html"><img class="wordle" src="knife.jpg" alt="portaboy"></a>
-	<a href="crossy/index.html"><img class="wordle" src="crossy.jpg" alt="sword"></a>
-	<a href="jetpackjoyride/index.html"><img class="wordle" src="jetpack.jpg" alt="fruitninja"></a>
+	<a href="knifehit/index.html"><img class="wordle" src="knife.jpg" alt="knife"></a>
+	<a href="crossy/index.html"><img class="wordle" src="crossy.jpg" alt="crossy"></a>
+	<a href="jetpackjoyride/index.html"><img class="wordle" src="jetpack.jpg" alt="jetpack"></a>
 	
 	</div>
 		
@@ -416,9 +416,9 @@ ul li a {
 	
 	<div class="bottom_row">
 
-	<a href="breaklock/index.html"><img class="wordle" src="lock.jpg" alt="portaboy"></a>
-	<a href="bison/index.html"><img class="wordle" src="bison.jpg" alt="sword"></a>
-	<a href="doodle/index.html"><img class="wordle" src="doodle.jpg" alt="fruitninja"></a>
+	<a href="breaklock/index.html"><img class="wordle" src="lock.jpg" alt="breaklock"></a>
+	<a href="bison/index.html"><img class="wordle" src="bison.jpg" alt="bison"></a>
+	<a href="doodle/index.html"><img class="wordle" src="doodle.jpg" alt="doodle"></a>
 	
 	</div>
 		
