--- a/index.html
+++ b/index.html
@@ -426,6 +426,59 @@ ul li a {
 	
 	<div class="bottom_row">
 
+	<a href="adcap/index.html"><img class="wordle" src="adcap.jpg" alt="adcap"></a>
+	<a href="assessment/index.html"><img class="wordle" src="assessment.jpg" alt="assessment"></a>
+	<a href="baldi/index.html"><img class="wordle" src="baldi.jpg" alt="baldi"></a>
+	
+		
+	</div>
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="basketball-legends/index.html"><img class="wordle" src="basketballL.jpg" alt="basketball_legends"></a>
+	<a href="basketball-stars/index.html"><img class="wordle" src="basketballS.jpg" alt="basketball_stars"></a>
+	<a href="boxing-physics2/index.html"><img class="wordle" src="boxing2.jpg" alt="boxing-physics2"></a>
+	
+	</div>
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="burger/index.html"><img class="wordle" src="burger.jpg" alt="burger"></a>
+	<a href="chrome-dino/index.html"><img class="wordle" src="chromedino.jpg" alt="bison"></a>
+	<a href="doodlegod/index.html"><img class="wordle" src="doodlegod.jpg" alt="doodlegod"></a>
+	
+	</div>
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="dreader/index.html"><img class="wordle" src="dreader.jpg" alt="dreader"></a>
+	<a href="drift/index.html"><img class="wordle" src="drift.jpg" alt="bison"></a>
+	<a href="exhibit/index.html"><img class="wordle" src="ex2.jpg" alt="exhibit"></a>
+	
+	</div>
+		
+		<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="freezeria/index.html"><img class="wordle" src="freezeria.jpg" alt="freezeria"></a>
+	<a href="friendlyfire/index.html"><img class="wordle" src="fire.jpg" alt="fire"></a>
+	<a href="greybox/index.html"><img class="wordle" src="greybox.jpg" alt="greybox"></a>
+	
+	</div>
+		
+		
+		<div class="clear"></div>
+	
+		
+	<div class="bottom_row">
+
 	<a href="https://ps.shrewsbury.k12.ma.us/public/"><img class="wordle" src="powerschool.jpg" alt="powerschool"></a>
 	<a href="https://lms.shrewsbury.k12.ma.us"><img class="wordle" src="schoology.jpg" alt="schoology"></a>
 	<a href="https://docs.google.com/document/u/0/"><img class="wordle" src="docs.jpg" alt="docs"></a>
