--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ ul li a {
     <li class="active"><a href="#" class="active-text"><i class="fa fa-codepen" aria-hidden="true"></i></a></li>
     <li><a href="index.html"><i class=" hjbjkbjkbjk" aria-hidden="true"><img src="game_logo.png" class="game"></i></a></li>
     <li><a href="movies.html"><i class="fa fa-rocket" aria-hidden="true"><img src="movie.png" class="movie"></i></a></li>
-    <li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"><img src="tools.png" class="tools"></i></a></li>
+    <li><a href="tools.html"><i class="fa fa-user-circle" aria-hidden="true"><img src="tools.png" class="tools"></i></a></li>
   </ul>
 </div>
 
