--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 </script>
 	
-	<link rel="shortcut icon" type="image/x-icon" href="poly.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	
 	<script>
 	
