--- a/movies.html
+++ b/movies.html
@@ -327,7 +327,7 @@ ul li a {
 	
 	<a href="https://www.plex.tv"><img src="plex.jpg" class="plex"></a>
 	
-		<iframe src="https://drive.google.com/embeddedfolderview?id=FOLDERID#list" width="600" height="500" frameborder="0"></iframe>
+		<iframe src="https://drive.google.com/file/d/1udUmDC2CyCIIJtvmZfdrlJA_tgF--YOn/view?usp=drivesdk#list" width="600" height="500" frameborder="0"></iframe>
 		<h3>Disclaimer!!! This is a draft. Movies will be added soon.</h3>
 	
 	
