--- a/movies.html
+++ b/movies.html
@@ -3,8 +3,10 @@
 
 <head>
 	
-	<link rel="shortcut icon" type="image/x-icon" href="poly.ico" />
 	
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	
 	<script>
 	
@@ -27,6 +29,8 @@ for (let i = 0; i < lis.length; i++) {
     
 	
     <title>SHS</title>
+	
+	<link rel="icon" type="image/x-icon" href="icon.png">
 	
 	
     
@@ -166,8 +170,6 @@ ul li a {
  background: linear-gradient(#133337, gray);
   background-repeat: no-repeat;
   background-size: cover;
-			
-			height:2600px;
 
 			
 		}
@@ -206,6 +208,7 @@ ul li a {
 			
 			
 			height:230px;
+			
 			padding-right:60px;
 			padding-left:60px;
 			
@@ -243,7 +246,7 @@ ul li a {
 
 		}
 		
-		h3 {
+		h4 {
 			
 			
 			text-align:center;
@@ -284,15 +287,6 @@ ul li a {
 			
 		}
 		
-		.plex {
-			
-			display:block;
-			width:800px;
-			margin-left:auto;
-			margin-right:auto;
-			padding-top:10em;
-			
-		}
 		
 		
 		
@@ -313,7 +307,7 @@ ul li a {
 	
 	<div class="buttons-container">
   <ul>
-    <li class="active"><a href="index.html" class="active-text"><i class="fa fa-codepen" aria-hidden="true"></i></a></li>
+    <li class="active"><a href="#" class="active-text"><i class="fa fa-codepen" aria-hidden="true"></i></a></li>
     <li><a href="index.html"><i class=" hjbjkbjkbjk" aria-hidden="true"><img src="game_logo.png" class="game"></i></a></li>
     <li><a href="movies.html"><i class="fa fa-rocket" aria-hidden="true"><img src="movie.png" class="movie"></i></a></li>
     <li><a href="tools.html"><i class="fa fa-user-circle" aria-hidden="true"><img src="tools.png" class="tools"></i></a></li>
@@ -322,19 +316,26 @@ ul li a {
 
 			</div>
 
+		
+	<div class="top_row">
 
+	<a href="https://tubitv.com/movies/100013789/knives-out"><img class="wordle" src="knives_out.jpg" alt="knives_out"></a>
+	<a href="https://tubitv.com/movies/301814/the-pink-panther-2"><img class="wordle" src="panther1.jpg" alt="pink_panther"></a>
+	<a href="https://www.youtube.com/watch?v=GyYJV1psDow"><img class="wordle" src="goodb.jpg" alt="good_burger"></a>
 	
+	</div>
 	
-	<a href="https://www.plex.tv"><img src="plex.jpg" class="plex"></a>
+	<div class="clear"></div>
 	
-		<iframe src="https://drive.google.com/file/d/1udUmDC2CyCIIJtvmZfdrlJA_tgF--YOn/view?usp=drivesdk#list" width="600" height="500" frameborder="0"></iframe>
-		<h3>Disclaimer!!! This is a draft. Movies will be added soon.</h3>
+	<div class="bottom_row">
+
+	<a href="https://tubitv.com/series/300000610/tom-and-jerry-theatricals"><img class="wordle" src="jerry.jpg" alt="jerry"></a>
+	<a href="https://tubitv.com/movies/694396/it"><img class="wordle" src="it.jpg" alt="it"></a>
+	<a href="https://tubitv.com"><img class="wordle" src="tubi.jpg" alt="tubi"></a>
 	
-	
-	
-	
-		
-		
+	</div>
+
+
 		</div>
 	
 </body>
