--- a/index.html
+++ b/index.html
@@ -487,6 +487,18 @@ ul li a {
 	
 		
 		</div>
+
+	<div class="clear"></div>
+	
+	<div class="bottom_row">
+
+	<a href="suika-game-main-2/index.html"><img class="wordle" src="suika.jpg" alt="freezeria"></a>
+	<a href="friendlyfire/index.html"><img class="wordle" src="fire.jpg" alt="fire"></a>
+	<a href="greybox/index.html"><img class="wordle" src="greybox.jpg" alt="greybox"></a>
+	
+	</div>
+
+	
 	
 	
 	
