--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ ul li a {
 	<div class="bottom_row">
 
 	<a href="suika-game-main-2/index.html"><img class="wordle" src="suika.jpg" alt="freezeria"></a>
-	<a href="friendlyfire/index.html"><img class="wordle" src="fire.jpg" alt="fire"></a>
+	<a href="infinite-cars-main/index.html"><img class="wordle" src="infinity.jpg" alt="fire"></a>
 	<a href="greybox/index.html"><img class="wordle" src="greybox.jpg" alt="greybox"></a>
 	
 	</div>
