--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ ul li a {
 	<div class="bottom_row">
 
 	<a href="cookieclicker/index.html"><img class="wordle" src="cookie.jpg" alt="cookie"></a>
-	<a href="subway/index.html"><img class="wordle" src="subway.jpg" alt="subway"></a>
+	<a href="Subway2/index.html"><img class="wordle" src="subway.jpg" alt="subway"></a>
 	<a href="touch/index.html"><img class="wordle" src="touch.jpg" alt="touch"></a>
 	
 	</div>
