--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ ul li a {
 			
            
 			
- background: linear-gradient(#0B6E4F, gray);
+ background: linear-gradient(#C30010, gray);
   background-repeat: no-repeat;
   background-size: cover;
 height:5000px;
