--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ ul li a {
 			
            
 			
- background: linear-gradient(#C30010, gray);
+ background: linear-gradient(#C30010, #F2F3F4);
   background-repeat: no-repeat;
   background-size: cover;
 height:5000px;
